# Tennis-Match-Research-Dashboard

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  fly.toml  pyproject.toml  tennis_predictor_bootstrap_prompt.md
.claude/: settings.local.json
.claude/skills/data-ingestion/: SKILL.md
.claude/skills/feature-engineering/: SKILL.md
.claude/skills/llm-tools/: SKILL.md
.claude/skills/model-training/: SKILL.md
.github/workflows/: ci.yml  keepalive.yml
data/: README.md
docs/: architecture.md  linkedin.md  methodology.md  phase7_plan.md  phases.md
notebooks/: aliases_review_csv_exploration.ipynb  explore_unmatched.ipynb
scripts/: apply_aliases_review.py  apply_player_dedupe.py  build_features.py  clear_scheduled_matches.py  compare_search_providers.py  docker-entrypoint.sh  find_duplicate_players.py  hf_bootstrap.py  predict_match.py  probe_matchstat.py  refresh_all.py  refresh_data.py  refresh_hot.py  refresh_pre_match_odds.py  train_models.py
src/tennis_predictor/: __init__.py  config.py
tests/: test_agent_budget.py  test_agent_e2e.py  test_agent_live.py  test_agent_loop_phase_6_1.py  test_app_context.py  test_app_db.py  test_app_scheduler.py  test_app_widgets.py  test_apply_aliases_review.py  test_build_features.py  test_compute_features.py  test_data_loading.py  test_elo_state.py  test_fatigue_state.py  test_feature_leakage.py  test_feature_vector.py  test_h2h_state.py  test_ingest_sackmann.py  test_last_match_per_surface_state.py  test_last_match_state.py  test_llm_budget.py  test_llm_client.py  test_llm_cost.py  test_llm_db_tools.py  test_llm_fetch_url.py  test_llm_tools.py  test_llm_web_search.py  test_load_hot.py  test_load_market.py  test_matchstat.py  test_matchstat_live.py  test_matchstat_resolver.py  test_model_roundtrip.py  test_model_tool_frame.py  test_odds_api.py  test_player_metadata.py  test_player_reconciliation.py  test_pre_match_odds.py  test_prediction_cache.py  test_ranking_lookup.py  (+10 more)
(+74 files in other folders)
