[project]
name = "tennis-predictor"
version = "0.0.1"
description = "Pre-match win-probability predictor for ATP/WTA singles, with an LLM analyst layer."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "lightgbm>=4.5.0",
    "rapidfuzz>=3.10.0",
    "pydantic>=2.9.0",
    "streamlit>=1.40.0",
    "python-dotenv>=1.0.0",
    "numpy>=2.0.0",
    "pyarrow>=18.0.0",
    "matplotlib>=3.9.0",
    "openpyxl>=3.1.5",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "pyright>=1.1.380",
    "nbstripout>=0.7.0",
    "pre-commit>=4.0.0",
    "ipykernel>=6.29.0",
    "pytest-asyncio>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tennis_predictor"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "data/raw/tennis_atp",
    "data/raw/tennis_wta",
    "notebooks",
]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle, pyflakes
    "I",                # isort
    "UP",               # pyupgrade
    "B",                # bugbear
    "C4",               # comprehensions
    "SIM",              # simplify
    "RUF",              # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.pyright]
include = ["src", "tests", "scripts"]
typeCheckingMode = "standard"
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = '-ra --strict-markers -m "not llm_live"'
markers = [
    "slow: tests that take more than a few seconds",
    "leakage: anti-leakage tests for feature engineering",
    "llm_live: tests that hit the real Anthropic API; excluded by default",
    "llm_record: tests that re-record Anthropic fixtures; excluded by default",
]
asyncio_mode = "auto"
